Update: main - Diff report completed

--- a/diff.html
+++ b/diff.html
@@ -181,7 +181,7 @@
       </svg>      <a href="#d2h-424417" class="d2h-file-name">/home/runner/work/progress/progress/clones/{ha-core/homeassistant/components → beta/custom_components}/plugwise/select.py</a>
       <span class="d2h-file-stats">
           <span class="d2h-lines-added">+15</span>
-          <span class="d2h-lines-deleted">-3</span>
+          <span class="d2h-lines-deleted">-4</span>
       </span>
     </span>
 </li>
@@ -17147,7 +17147,7 @@
 <tr>
     <td class="d2h-code-linenumber d2h-info"></td>
     <td class="d2h-info">
-        <div class="d2h-code-line">@@ -52,6 +58,7 @@</div>
+        <div class="d2h-code-line">@@ -52,7 +58,7 @@</div>
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
@@ -17183,19 +17183,30 @@
         </div>
     </td>
 </tr><tr>
-    <td class="d2h-code-linenumber d2h-ins">
+    <td class="d2h-code-linenumber d2h-del d2h-change">
+      <div class="line-num1">55</div>
+<div class="line-num2"></div>
+    </td>
+    <td class="d2h-del d2h-change">
+        <div class="d2h-code-line">
+            <span class="d2h-code-line-prefix">-</span>
+            <span class="d2h-code-line-ctn">        <del>device_class</del>=<del>&quot;plugwise__regulation_mode&quot;</del>,</span>
+        </div>
+    </td>
+</tr><tr>
+    <td class="d2h-code-linenumber d2h-ins d2h-change">
       <div class="line-num1"></div>
 <div class="line-num2">61</div>
     </td>
-    <td class="d2h-ins">
+    <td class="d2h-ins d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">        entity_registry_enabled_default=False,</span>
+            <span class="d2h-code-line-ctn">        <ins>entity_registry_enabled_default</ins>=<ins>False</ins>,</span>
         </div>
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
-      <div class="line-num1">55</div>
+      <div class="line-num1">56</div>
 <div class="line-num2">62</div>
     </td>
     <td class="d2h-cntx">
@@ -17206,7 +17217,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
-      <div class="line-num1">56</div>
+      <div class="line-num1">57</div>
 <div class="line-num2">63</div>
     </td>
     <td class="d2h-cntx">
@@ -17217,7 +17228,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
-      <div class="line-num1">57</div>
+      <div class="line-num1">58</div>
 <div class="line-num2">64</div>
     </td>
     <td class="d2h-cntx">
@@ -17230,11 +17241,11 @@
 <tr>
     <td class="d2h-code-linenumber d2h-info"></td>
     <td class="d2h-info">
-        <div class="d2h-code-line">@@ -64,7 +71,7 @@</div>
+        <div class="d2h-code-line">@@ -65,7 +71,7 @@</div>
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
-      <div class="line-num1">64</div>
+      <div class="line-num1">65</div>
 <div class="line-num2">71</div>
     </td>
     <td class="d2h-cntx">
@@ -17245,7 +17256,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
-      <div class="line-num1">65</div>
+      <div class="line-num1">66</div>
 <div class="line-num2">72</div>
     </td>
     <td class="d2h-cntx">
@@ -17256,7 +17267,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
-      <div class="line-num1">66</div>
+      <div class="line-num1">67</div>
 <div class="line-num2">73</div>
     </td>
     <td class="d2h-cntx">
@@ -17267,7 +17278,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-del d2h-change">
-      <div class="line-num1">67</div>
+      <div class="line-num1">68</div>
 <div class="line-num2"></div>
     </td>
     <td class="d2h-del d2h-change">
@@ -17289,7 +17300,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
-      <div class="line-num1">68</div>
+      <div class="line-num1">69</div>
 <div class="line-num2">75</div>
     </td>
     <td class="d2h-cntx">
@@ -17300,7 +17311,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
-      <div class="line-num1">69</div>
+      <div class="line-num1">70</div>
 <div class="line-num2">76</div>
     </td>
     <td class="d2h-cntx">
@@ -17311,7 +17322,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
-      <div class="line-num1">70</div>
+      <div class="line-num1">71</div>
 <div class="line-num2">77</div>
     </td>
     <td class="d2h-cntx">
@@ -17324,11 +17335,11 @@
 <tr>
     <td class="d2h-code-linenumber d2h-info"></td>
     <td class="d2h-info">
-        <div class="d2h-code-line">@@ -76,6 +83,7 @@</div>
+        <div class="d2h-code-line">@@ -77,6 +83,7 @@</div>
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
-      <div class="line-num1">76</div>
+      <div class="line-num1">77</div>
 <div class="line-num2">83</div>
     </td>
     <td class="d2h-cntx">
@@ -17339,7 +17350,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
-      <div class="line-num1">77</div>
+      <div class="line-num1">78</div>
 <div class="line-num2">84</div>
     </td>
     <td class="d2h-cntx">
@@ -17350,7 +17361,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
-      <div class="line-num1">78</div>
+      <div class="line-num1">79</div>
 <div class="line-num2">85</div>
     </td>
     <td class="d2h-cntx">
@@ -17372,7 +17383,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
-      <div class="line-num1">79</div>
+      <div class="line-num1">80</div>
 <div class="line-num2">87</div>
     </td>
     <td class="d2h-cntx">
@@ -17383,7 +17394,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
-      <div class="line-num1">80</div>
+      <div class="line-num1">81</div>
 <div class="line-num2">88</div>
     </td>
     <td class="d2h-cntx">
@@ -17394,7 +17405,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
-      <div class="line-num1">81</div>
+      <div class="line-num1">82</div>
 <div class="line-num2">89</div>
     </td>
     <td class="d2h-cntx">
@@ -17407,11 +17418,11 @@
 <tr>
     <td class="d2h-code-linenumber d2h-info"></td>
     <td class="d2h-info">
-        <div class="d2h-code-line">@@ -111,5 +119,9 @@</div>
+        <div class="d2h-code-line">@@ -112,5 +119,9 @@</div>
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
-      <div class="line-num1">111</div>
+      <div class="line-num1">112</div>
 <div class="line-num2">119</div>
     </td>
     <td class="d2h-cntx">
@@ -17422,7 +17433,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
-      <div class="line-num1">112</div>
+      <div class="line-num1">113</div>
 <div class="line-num2">120</div>
     </td>
     <td class="d2h-cntx">
@@ -17433,7 +17444,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
-      <div class="line-num1">113</div>
+      <div class="line-num1">114</div>
 <div class="line-num2">121</div>
     </td>
     <td class="d2h-cntx">
@@ -17444,7 +17455,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-del d2h-change">
-      <div class="line-num1">114</div>
+      <div class="line-num1">115</div>
 <div class="line-num2"></div>
     </td>
     <td class="d2h-del d2h-change">
@@ -17510,7 +17521,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
-      <div class="line-num1">115</div>
+      <div class="line-num1">116</div>
 <div class="line-num2">127</div>
     </td>
     <td class="d2h-cntx">
