--- a/diff_core_75905.html
+++ b/diff_core_75905.html
@@ -180,7 +180,7 @@
           <path d="M6 9H3V7h3V4l5 4-5 4V9z m8-7v12c0 0.55-0.45 1-1 1H1c-0.55 0-1-0.45-1-1V2c0-0.55 0.45-1 1-1h12c0.55 0 1 0.45 1 1z m-1 0H1v12h12V2z"></path>
       </svg>      <a href="#d2h-340423" class="d2h-file-name">/home/runner/work/progress/progress/clones/{beta/custom_components → ha-core/homeassistant/components}/plugwise/select.py</a>
       <span class="d2h-file-stats">
-          <span class="d2h-lines-added">+15</span>
+          <span class="d2h-lines-added">+16</span>
           <span class="d2h-lines-deleted">-24</span>
       </span>
     </span>
@@ -17385,7 +17385,7 @@
 <tr>
     <td class="d2h-code-linenumber d2h-info"></td>
     <td class="d2h-info">
-        <div class="d2h-code-line">@@ -56,9 +50,8 @@</div>
+        <div class="d2h-code-line">@@ -56,9 +50,9 @@</div>
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
@@ -17443,14 +17443,14 @@
         </div>
     </td>
 </tr><tr>
-    <td class="d2h-code-linenumber d2h-del">
+    <td class="d2h-code-linenumber d2h-del d2h-change">
       <div class="line-num1">61</div>
 <div class="line-num2"></div>
     </td>
-    <td class="d2h-del">
+    <td class="d2h-del d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">        entity_registry_enabled_default=False,</span>
+            <span class="d2h-code-line-ctn">        <del>entity_registry_enabled_default</del>=<del>False</del>,</span>
         </div>
     </td>
 </tr><tr>
@@ -17476,9 +17476,20 @@
         </div>
     </td>
 </tr><tr>
+    <td class="d2h-code-linenumber d2h-ins d2h-change">
+      <div class="line-num1"></div>
+<div class="line-num2">55</div>
+    </td>
+    <td class="d2h-ins d2h-change">
+        <div class="d2h-code-line">
+            <span class="d2h-code-line-prefix">+</span>
+            <span class="d2h-code-line-ctn">        <ins>device_class</ins>=<ins>&quot;plugwise__regulation_mode&quot;</ins>,</span>
+        </div>
+    </td>
+</tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
       <div class="line-num1">62</div>
-<div class="line-num2">55</div>
+<div class="line-num2">56</div>
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-line">
@@ -17489,7 +17500,7 @@
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
       <div class="line-num1">63</div>
-<div class="line-num2">56</div>
+<div class="line-num2">57</div>
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-line">
@@ -17500,7 +17511,7 @@
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
       <div class="line-num1">64</div>
-<div class="line-num2">57</div>
+<div class="line-num2">58</div>
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-line">
@@ -17512,12 +17523,12 @@
 <tr>
     <td class="d2h-code-linenumber d2h-info"></td>
     <td class="d2h-info">
-        <div class="d2h-code-line">@@ -71,16 +64,18 @@</div>
+        <div class="d2h-code-line">@@ -71,16 +65,18 @@</div>
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
       <div class="line-num1">71</div>
-<div class="line-num2">64</div>
+<div class="line-num2">65</div>
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-line">
@@ -17528,7 +17539,7 @@
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
       <div class="line-num1">72</div>
-<div class="line-num2">65</div>
+<div class="line-num2">66</div>
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-line">
@@ -17539,7 +17550,7 @@
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
       <div class="line-num1">73</div>
-<div class="line-num2">66</div>
+<div class="line-num2">67</div>
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-line">
@@ -17561,7 +17572,7 @@
 </tr><tr>
     <td class="d2h-code-linenumber d2h-ins d2h-change">
       <div class="line-num1"></div>
-<div class="line-num2">67</div>
+<div class="line-num2">68</div>
     </td>
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-line">
@@ -17572,7 +17583,7 @@
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
       <div class="line-num1">75</div>
-<div class="line-num2">68</div>
+<div class="line-num2">69</div>
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-line">
@@ -17583,7 +17594,7 @@
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
       <div class="line-num1">76</div>
-<div class="line-num2">69</div>
+<div class="line-num2">70</div>
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-line">
@@ -17594,7 +17605,7 @@
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
       <div class="line-num1">77</div>
-<div class="line-num2">70</div>
+<div class="line-num2">71</div>
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-line">
@@ -17605,7 +17616,7 @@
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
       <div class="line-num1">78</div>
-<div class="line-num2">71</div>
+<div class="line-num2">72</div>
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-line">
@@ -17627,7 +17638,7 @@
 </tr><tr>
     <td class="d2h-code-linenumber d2h-ins d2h-change">
       <div class="line-num1"></div>
-<div class="line-num2">72</div>
+<div class="line-num2">73</div>
     </td>
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-line">
@@ -17638,7 +17649,7 @@
 </tr><tr>
     <td class="d2h-code-linenumber d2h-ins">
       <div class="line-num1"></div>
-<div class="line-num2">73</div>
+<div class="line-num2">74</div>
     </td>
     <td class="d2h-ins">
         <div class="d2h-code-line">
@@ -17649,7 +17660,7 @@
 </tr><tr>
     <td class="d2h-code-linenumber d2h-ins">
       <div class="line-num1"></div>
-<div class="line-num2">74</div>
+<div class="line-num2">75</div>
     </td>
     <td class="d2h-ins">
         <div class="d2h-code-line">
@@ -17660,7 +17671,7 @@
 </tr><tr>
     <td class="d2h-code-linenumber d2h-ins">
       <div class="line-num1"></div>
-<div class="line-num2">75</div>
+<div class="line-num2">76</div>
     </td>
     <td class="d2h-ins">
         <div class="d2h-code-line">
@@ -17671,7 +17682,7 @@
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
       <div class="line-num1">80</div>
-<div class="line-num2">76</div>
+<div class="line-num2">77</div>
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-line">
@@ -17682,7 +17693,7 @@
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
       <div class="line-num1">81</div>
-<div class="line-num2">77</div>
+<div class="line-num2">78</div>
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-line">
@@ -17693,7 +17704,7 @@
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
       <div class="line-num1">82</div>
-<div class="line-num2">78</div>
+<div class="line-num2">79</div>
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-line">
@@ -17715,7 +17726,7 @@
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
       <div class="line-num1">84</div>
-<div class="line-num2">79</div>
+<div class="line-num2">80</div>
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-line">
@@ -17726,7 +17737,7 @@
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
       <div class="line-num1">85</div>
-<div class="line-num2">80</div>
+<div class="line-num2">81</div>
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-line">
@@ -17737,7 +17748,7 @@
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
       <div class="line-num1">86</div>
-<div class="line-num2">81</div>
+<div class="line-num2">82</div>
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-line">
@@ -17749,12 +17760,12 @@
 <tr>
     <td class="d2h-code-linenumber d2h-info"></td>
     <td class="d2h-info">
-        <div class="d2h-code-line">@@ -104,21 +99,17 @@</div>
+        <div class="d2h-code-line">@@ -104,21 +100,17 @@</div>
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
       <div class="line-num1">104</div>
-<div class="line-num2">99</div>
+<div class="line-num2">100</div>
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-line">
@@ -17765,7 +17776,7 @@
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
       <div class="line-num1">105</div>
-<div class="line-num2">100</div>
+<div class="line-num2">101</div>
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-line">
@@ -17776,7 +17787,7 @@
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
       <div class="line-num1">106</div>
-<div class="line-num2">101</div>
+<div class="line-num2">102</div>
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-line">
@@ -17798,7 +17809,7 @@
 </tr><tr>
     <td class="d2h-code-linenumber d2h-ins d2h-change">
       <div class="line-num1"></div>
-<div class="line-num2">102</div>
+<div class="line-num2">103</div>
     </td>
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-line">
@@ -17809,7 +17820,7 @@
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
       <div class="line-num1">108</div>
-<div class="line-num2">103</div>
+<div class="line-num2">104</div>
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-line">
@@ -17820,7 +17831,7 @@
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
       <div class="line-num1">109</div>
-<div class="line-num2">104</div>
+<div class="line-num2">105</div>
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-line">
@@ -17831,7 +17842,7 @@
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
       <div class="line-num1">110</div>
-<div class="line-num2">105</div>
+<div class="line-num2">106</div>
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-line">
@@ -17842,7 +17853,7 @@
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
       <div class="line-num1">111</div>
-<div class="line-num2">106</div>
+<div class="line-num2">107</div>
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-line">
@@ -17864,7 +17875,7 @@
 </tr><tr>
     <td class="d2h-code-linenumber d2h-ins d2h-change">
       <div class="line-num1"></div>
-<div class="line-num2">107</div>
+<div class="line-num2">108</div>
     </td>
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-line">
@@ -17875,7 +17886,7 @@
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
       <div class="line-num1">113</div>
-<div class="line-num2">108</div>
+<div class="line-num2">109</div>
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-line">
@@ -17886,7 +17897,7 @@
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
       <div class="line-num1">114</div>
-<div class="line-num2">109</div>
+<div class="line-num2">110</div>
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-line">
@@ -17897,7 +17908,7 @@
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
       <div class="line-num1">115</div>
-<div class="line-num2">110</div>
+<div class="line-num2">111</div>
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-line">
@@ -17908,7 +17919,7 @@
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
       <div class="line-num1">116</div>
-<div class="line-num2">111</div>
+<div class="line-num2">112</div>
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-line">
@@ -17919,7 +17930,7 @@
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
       <div class="line-num1">117</div>
-<div class="line-num2">112</div>
+<div class="line-num2">113</div>
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-line">
@@ -17930,7 +17941,7 @@
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
       <div class="line-num1">118</div>
-<div class="line-num2">113</div>
+<div class="line-num2">114</div>
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-line">
@@ -17996,7 +18007,7 @@
 </tr><tr>
     <td class="d2h-code-linenumber d2h-ins d2h-change">
       <div class="line-num1"></div>
-<div class="line-num2">114</div>
+<div class="line-num2">115</div>
     </td>
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-line">
@@ -18007,7 +18018,7 @@
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
       <div class="line-num1">124</div>
-<div class="line-num2">115</div>
+<div class="line-num2">116</div>
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-line">
